--- a/templates/static/css/common.css
+++ b/templates/static/css/common.css
@@ -434,7 +434,7 @@ body {
 .w-money {
   color: #f35656;
   font-size: 1.1rem;
-  font-family: DIN Condensed,microsoft yahei;
+  font-family: DIN Condensed;
 }
 /**
  *   @section 个人主页视频播放按钮动画
