--- a/templates/static/css/common.less
+++ b/templates/static/css/common.less
@@ -274,7 +274,7 @@ body {
 .w-money {
     color: @w-red;
     font-size: 44rem/40rem;
-    font-family: DIN Condensed,microsoft yahei;
+    font-family: DIN Condensed;
 }
 
 /**
